--- a/src/app/pages/reservacion/reservacion.component.css
+++ b/src/app/pages/reservacion/reservacion.component.css
@@ -1,12 +1,15 @@
 .form-container {
-  max-width: 500px;
-  margin: 2rem auto;
-  padding: 2rem;
-  border-radius: 8px;
-  background-color: #fefefe;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    margin: 2rem auto;
+    padding: 2rem;
+    border-radius: 8px;
+    background-color: #ffdf9b;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
+.navbar{
+    background-color: #ffdf9b;
 
+}
 h2 {
   text-align: center;
   margin-bottom: 1.5rem;
